<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_180dp">

    <LinearLayout
        android:id="@+id/month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtmonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7A7A7A"
            android:text="@string/text_month"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCalendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_today" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_date" />

                <TextView
                    android:id="@+id/txtDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_day" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/local_image"
                    android:layout_width="80dp"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_local" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/text_score" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/opponent_image"
                    android:layout_width="80dp"
                    android:layout_height="66dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/opponent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_opponent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>